fixed canvas container view at mobile landscape and vertical align of user profile

--- a/static/game/profile.css
+++ b/static/game/profile.css
@@ -256,6 +256,7 @@
 	border-radius:0.25rem;
 	font-size: 0.9rem;
 	text-align:justify;
+	
 }
 
 .match-history-versus-item button:hover, .match-history-tournament-item button:hover {
@@ -267,6 +268,7 @@
 	height:1rem;
 	border-radius:1rem;
 	margin:0 0.25rem;
+	vertical-align:middle;
 }
 .match-history-versus-time, .match-history-tournament-time, .other-match-history-versus-time, .other-match-history-tournament-time{
 	overflow:auto;
